# algorithmsAndProgramming

./: README.md
exercícios/: biblioteca_string.md  desvio_condicional.md  entrada_e_saida.md  laços.md  matrizes.md  pensamento_computacional_1.md  strings.md  vetores.md
exercícios/laços/: CMakeLists.txt  exercicio_01.c  exercicio_02.c  exercicio_03.c  exercicio_04.c  exercicio_05.c
exercícios/matrizes/: CMakeLists.txt  exercicio_01.c  exercicio_02.c  exercicio_03.c  exercicio_04.c  exercicio_05.c  exercicio_06.c
exercícios/strings/: CMakeLists.txt  README.md  exercicio_01.c  exercicio_02.c  exercicio_03.c  exercicio_04.c  exercicio_05.c  exercicio_06.c  exercicio_07.c  exercicio_08.c
exercícios/vetores/: CMakeLists.txt  exercicio_01.c  exercicio_02.c  exercicio_03.c  exercicio_04.c  exercicio_05.c
resumos/: CMakeLists.txt  alinhamento.md  data_alignment.c  estruturas.md  strings.md  vetores_e_matrizes.md
