cmake_minimum_required(VERSION 3.19)
project(loops C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio_01 exercicio_01.c)
add_executable(exercicio_02 exercicio_02.c)
add_executable(exercicio_03 exercicio_03.c)
add_executable(exercicio_04 exercicio_04.c)
add_executable(exercicio_05 exercicio_05.c)