cmake_minimum_required(VERSION 3.19)
project(loops C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio_01_laços exercicio_01.c)
add_executable(exercicio_02_laços exercicio_02.c)
add_executable(exercicio_03_laços exercicio_03.c)
add_executable(exercicio_04_laços exercicio_04.c)
add_executable(exercicio_05_laços exercicio_05.c)