cmake_minimum_required(VERSION 3.19)
project(matrices C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio_01_matrizes exercicio_01.c)
add_executable(exercicio_02_matrizes exercicio_02.c)
add_executable(exercicio_03_matrizes exercicio_03.c)
add_executable(exercicio_04_matrizes exercicio_04.c)
add_executable(exercicio_05_matrizes exercicio_05.c)