cmake_minimum_required(VERSION 3.19)
project(strings C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio_01_strings exercicio_01.c)
add_executable(exercicio_02_strings exercicio_02.c)
add_executable(exercicio_03_strings exercicio_03.c)
add_executable(exercicio_04_strings exercicio_04.c)
add_executable(exercicio_05_strings exercicio_05.c)
add_executable(exercicio_06_strings exercicio_06.c)
add_executable(exercicio_07_strings exercicio_07.c)
add_executable(exercicio_08_strings exercicio_08.c)
#add_executable(exercicio_09_strings exercicio_09.c)
#add_executable(exercicio_10_strings exercicio_10.c)
#add_executable(exercicio_11_strings exercicio_11.c)
#add_executable(exercicio_12_strings exercicio_12.c)
#add_executable(exercicio_13_strings exercicio_13.c)
#add_executable(exercicio_14_strings exercicio_14.c)
#add_executable(exercicio_15_strings exercicio_15.c)
#add_executable(exercicio_16_strings exercicio_16.c)