cmake_minimum_required(VERSION 3.19)
project(loops C)

set(CMAKE_C_STANDARD 11)

add_executable(exercicio_01_vetores exercicio_01.c)
add_executable(exercicio_02_vetores exercicio_02.c)
add_executable(exercicio_03_vetores exercicio_03.c)
add_executable(exercicio_04_vetores exercicio_04.c)
add_executable(exercicio_05_vetores exercicio_05.c)